<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground"
    android:fillViewport="false">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user_edit_dialog_title_txtView"
            android:id="@+id/user_edit_dialog_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            style="@style/TitleStyle"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_group_change_txtView"
            android:id="@+id/user_group_change_txtView"
            android:layout_below="@+id/user_edit_dialog_title"
            android:layout_alignLeft="@+id/user_edit_dialog_title"
            android:layout_alignStart="@+id/user_edit_dialog_title"
            android:layout_marginTop="46dp"
            style="@style/TitleStyle"/>

        <Spinner
            android:id="@+id/user_group_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_group_change_txtView"
            android:layout_alignLeft="@+id/user_group_change_txtView"
            android:layout_alignStart="@+id/user_group_change_txtView"
            android:layout_marginTop="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_save_changes_btn"
            android:text="@string/user_save_changes_btn"
            android:layout_below="@+id/user_group_spinner"
            android:layout_alignLeft="@+id/user_group_spinner"
            android:layout_alignStart="@+id/user_group_spinner"
            android:layout_marginTop="46dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_delete_btn"
            android:text="@string/user_delete_btn"
            android:layout_below="@+id/user_save_changes_btn"
            android:layout_alignLeft="@+id/user_save_changes_btn"
            android:layout_alignStart="@+id/user_save_changes_btn"
            android:layout_marginTop="10dp"
            />

    </RelativeLayout>
</ScrollView>