<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackground">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/go_back_btn"
            android:text="@string/iteration_add_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            style="@style/TitleStyle"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iteration_title"
            android:text="@string/iteration_title_txtView"
            android:layout_below="@+id/go_back_btn"
            android:layout_alignLeft="@+id/go_back_btn"
            android:layout_alignStart="@+id/go_back_btn"
            style="@style/TitleStyle"
            android:textStyle="bold"
            android:layout_marginTop="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iteration_title_editText"
            android:text=""
            android:layout_below="@+id/iteration_title"
            android:layout_alignLeft="@+id/iteration_title"
            android:layout_alignStart="@+id/iteration_title"
            android:layout_marginTop="10dp"
            android:ems="20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iteration_description"
            android:text="@string/iteration_description_txtView"
            android:layout_below="@+id/iteration_title_editText"
            android:layout_alignLeft="@+id/iteration_title_editText"
            android:layout_alignStart="@+id/iteration_title_editText"
            style="@style/TitleStyle"
            android:textStyle="bold"
            android:layout_marginTop="46dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iteration_description_editText"
            android:text=""
            android:layout_below="@+id/iteration_description"
            android:layout_alignLeft="@+id/iteration_description"
            android:layout_alignStart="@+id/iteration_description"
            android:layout_marginTop="10dp"
            android:ems="20" />



        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iteration_start_date"
            android:text="@string/iteration_start_date_txtView"
            style="@style/TitleStyle"
            android:textStyle="bold"
            android:layout_below="@+id/iteration_description_editText"
            android:layout_alignLeft="@+id/iteration_description_editText"
            android:layout_alignStart="@+id/iteration_description_editText"
            android:layout_marginTop="46dp"
            >
        </TextView>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iteration_end_date"
            android:text="@string/iteration_end_date_txtView"
            style="@style/TitleStyle"
            android:textStyle="bold"
            android:layout_marginLeft="150dp"
            android:layout_below="@+id/iteration_description_editText"
            android:layout_marginTop="46dp"
            >
        </TextView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:onClick="showDatePickerDialog"
            android:layout_below="@+id/iteration_start_date"
            android:layout_alignLeft="@+id/iteration_start_date"
            android:layout_alignStart="@+id/iteration_start_date"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/select_end_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_date"
            android:onClick="showDatePickerDialog"
            android:layout_alignLeft="@+id/iteration_end_date"
            android:layout_alignStart="@+id/iteration_end_date"
            android:layout_below="@+id/iteration_end_date"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"/>



    </RelativeLayout>



</ScrollView>

