<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bryan.teamproject.ProfileActivity">
<LinearLayout
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center|center_horizontal"
    android:paddingBottom="100dp"
    android:paddingLeft="22dp"
    android:paddingRight="22dp"
    android:paddingTop="5dp"
    android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="text here"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="100dp"
        android:layout_marginTop="86dp"
        android:textSize="30sp"
        android:id="@+id/profile_greeting_msg_txtView"
        android:layout_weight="0.60" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/service1"
        android:id="@+id/requirement_tracker_btn"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@id/profile_greeting_msg_txtView"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/service2"
        android:id="@+id/com_tool_btn"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/requirement_tracker_btn"
        android:layout_alignLeft="@+id/requirement_tracker_btn"
        android:layout_alignStart="@+id/requirement_tracker_btn"

        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/service3"
        android:id="@+id/issue_tracker_btn"
        android:layout_below="@+id/com_tool_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        />
</LinearLayout>
</RelativeLayout>
