<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/fragment_project_edit_id"
        android:background="@color/colorbackground"
        tools:context="com.example.bryan.teamproject.ProjectInfoActivity">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go Back"
            android:id="@+id/go_back_btn"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/project_name_label_txtView"
            android:id="@+id/project_name_label_id"
            android:textStyle="bold"
            android:layout_below="@+id/go_back_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project_name_id"
            android:text=""
            android:layout_below="@+id/project_name_label_id"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="60dp"
            android:ems="20"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/project_description_label_txtView"
            android:id="@+id/project_description_label_id"
            android:textStyle="bold"
            android:layout_below="@+id/project_name_id"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/project_description_id"
            android:text=""
            android:ems="20"
            android:layout_below="@+id/project_description_label_id"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="70dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_project_edit_info_btn"
            android:id="@+id/project_edit_save_btn"
            android:layout_below="@+id/project_description_id"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"

             />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_project_info_btn"
            android:id="@+id/project_delete_btn"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/project_edit_save_btn"/>


    </RelativeLayout>

</ScrollView>